ping-pong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-deployment
  labels:
    app: ping-pong
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: ping-pong-image:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
