ping-pong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: ping-pong
  type: ClusterIP
